# Synthmind

./: .gitignore  CITATION.cff  CORE_METHOD_RETRAIN_ABLATION_REPORT.md  README.md  STAGE2_CORE_METHOD_REPORT.md  STAGE2_PRECISION_REPORT.md  STAGE2_V3_PRECISION_REPORT.md  STAGE2_V4_OOV_RANKING_REPORT.md  STAGE2_V5_OOV_TEMPLATE_REPORT.md  STAGE3_STAGE35_IMPROVEMENT_REPORT.md  STAGE3_STAGE35_V3_FINAL_REPORT.md  STAGE3_STAGE35_V4_ALIGNMENT_REPORT.md  STAGE3_TOP10_CONDITION_SUCCESS_REPORT.md  STAGE3_V3_DISTRIBUTIONAL_CONDITION_REPORT.md  TECHNICAL_DISCLOSURE_SYN_PRED.md  pyproject.toml  requirements.txt
12_research/: train_rsp_vnext_family_prior.py
configs/: full_route.yaml  precursor_only.yaml
docs/: CONFIGURATION.md  FULL_RETRAIN_ACCURACY_REPORT_20260710.md  OUTPUTS.md  PIPELINE.md  evaluation_protocol_v1.md  part1_stage04_stage3.tex  part2_stage35.tex  part3_stage07.tex  pipeline_documentation.txt  stage_to_functional_module_migration.md  synpred_analysis.tex  synpred_analysis_for_paper.txt
examples/: report_manifest.example.csv
pipeline/: run_pipeline.py
pipeline/core/: 03_build_infer_graph_embeddings_chgnet.py  03d_build_chgnet_cache_stage2_inference_mode.py  05_build_hybrid_features_infer.py  (+16 more)
scripts/: readme.txt  run_analyze_inference_results.sh  run_benchmark_models.sh  run_full_pipeline.sh  run_full_route.sh  run_infer_batches_parallel.sh  run_inference_pipeline.sh  run_precursor_only.sh  run_prepare_training_data.sh  run_stage2_stage3_benchmark.sh  run_train_models.sh
synpred/: __init__.py
synthmind/: __init__.py
tests/: test_pipeline_regressions.py
(+353 files in other folders)
