[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synthmind"
version = "0.1.0"
description = "Synthmind synthesis-route prediction code for inorganic materials."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Honglin" }]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "joblib>=1.3",
  "PyYAML>=6.0",
  "tqdm>=4.66",
  "tabulate>=0.9",
]

[project.optional-dependencies]
models = [
  "torch>=2.1",
  "lightgbm>=4.0",
  "chgnet>=0.3",
  "pymatgen>=2024.0",
  "mp-api>=0.40",
]
test = ["pytest>=8.0"]

[tool.setuptools.packages.find]
include = ["synthmind*"]
